--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "moment": "^2.29.1",
     "react": "17.0.2",
     "react-native": "0.66.1",
     "react-native-calendars": "^1.1268.0",
@@ -20,6 +21,7 @@
     "react-native-safe-area": "^0.5.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
+    "react-native-swipe-gestures": "^1.0.5",
     "react-native-swipeout": "^2.3.6",
     "react-native-vector-icons": "^9.0.0",
     "react-redux": "^7.2.6",
